[package]
name = "xlog"
version = "0.1.8"
authors = ["Sunli <scott_s829@163.com>"]
edition = "2018"
description = "Xlog can add key/value pairs to your log lines."
publish = true
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/xlog/"
homepage = "https://github.com/sunli829/xlog"
repository = "https://github.com/sunli829/xlog"
readme = "README.md"

[dependencies]
log = { version = "0.4", features = ["kv_unstable"] }

[dev-dependencies]
femme = "1.3"
anyhow = "1.0"

